--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medium-scrape",
-  "version": "1.0.1-rc1",
+  "version": "1.0.1-rc2",
   "description": "Scraper for Medium.com posts",
   "main": "index.js",
   "scripts": {
@@ -8,18 +8,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0wx/medium-scrapper.git"
+    "url": "git+https://github.com/0wx/medium-scrape.git"
   },
   "keywords": [
     "medium",
-    "scrapper"
+    "scrape",
+    "scraper"
   ],
   "author": "awotism",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/0wx/medium-scrapper/issues"
+    "url": "https://github.com/0wx/medium-scrape/issues"
   },
-  "homepage": "https://github.com/0wx/medium-scrapper#readme",
+  "homepage": "https://github.com/0wx/medium-scrape#readme",
   "dependencies": {
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3"
